; ModuleID = '/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-debug.c_iter_next.c'
source_filename = "/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-debug.c_iter_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vgic_state_iter = type { i64, i64, i64, i64, i64, i64, i64, i64* }

@VGIC_NR_PRIVATE_IRQS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vgic_state_iter*)* @iter_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iter_next(%struct.vgic_state_iter* %0) #0 {
  %2 = alloca %struct.vgic_state_iter*, align 8
  store %struct.vgic_state_iter* %0, %struct.vgic_state_iter** %2, align 8
  %3 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %4 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %9 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = add nsw i64 %10, 1
  store i64 %11, i64* %9, align 8
  br label %68

12:                                               ; preds = %1
  %13 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %14 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, 1
  store i64 %16, i64* %14, align 8
  %17 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %18 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @VGIC_NR_PRIVATE_IRQS, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %34

22:                                               ; preds = %12
  %23 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %24 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %23, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = add nsw i64 %25, 1
  store i64 %26, i64* %24, align 8
  %27 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %28 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %27, i32 0, i32 3
  %29 = load i64, i64* %28, align 8
  %30 = icmp slt i64 %26, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %22
  %32 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %33 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %32, i32 0, i32 1
  store i64 0, i64* %33, align 8
  br label %34

34:                                               ; preds = %31, %22, %12
  %35 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %36 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %35, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %39 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %38, i32 0, i32 4
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @VGIC_NR_PRIVATE_IRQS, align 8
  %42 = add nsw i64 %40, %41
  %43 = icmp sge i64 %37, %42
  br i1 %43, label %44, label %68

44:                                               ; preds = %34
  %45 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %46 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %45, i32 0, i32 5
  %47 = load i64, i64* %46, align 8
  %48 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %49 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %48, i32 0, i32 6
  %50 = load i64, i64* %49, align 8
  %51 = icmp ult i64 %47, %50
  br i1 %51, label %52, label %63

52:                                               ; preds = %44
  %53 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %54 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %53, i32 0, i32 7
  %55 = load i64*, i64** %54, align 8
  %56 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %57 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %56, i32 0, i32 5
  %58 = load i64, i64* %57, align 8
  %59 = getelementptr inbounds i64, i64* %55, i64 %58
  %60 = load i64, i64* %59, align 8
  %61 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %62 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %61, i32 0, i32 1
  store i64 %60, i64* %62, align 8
  br label %63

63:                                               ; preds = %52, %44
  %64 = load %struct.vgic_state_iter*, %struct.vgic_state_iter** %2, align 8
  %65 = getelementptr inbounds %struct.vgic_state_iter, %struct.vgic_state_iter* %64, i32 0, i32 5
  %66 = load i64, i64* %65, align 8
  %67 = add i64 %66, 1
  store i64 %67, i64* %65, align 8
  br label %68

68:                                               ; preds = %7, %63, %34
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
